[package]
name = "ER_Magic_1-9"
version = "0.1.0"
edition = "2024"

[dependencies]
eldenring = "0.10.0"
eldenring-util = "0.10.0"
fromsoftware-shared = "0.10.0"
libmem = "5.1.0"
windows = { version = "0.62.0", features = ["Win32_System_Threading", "Win32_System_LibraryLoader"] }
[lib]
crate-type = ["cdylib"]
